# founmle

./: .env  .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt
gauss/: setup.py
gauss/distributions/: GaussianDistribution.py
pml/: README.md
pml/notebooks/: Numpy.ipynb
prob_distribs/: README.md  setup.py  test.py
prob_distribs/probdis/: BinomialDistribution.py  GaussianDistribution.py  GeneralDistribution.py
src/: Gaussian.ipynb  wine_quality.ipynb
src/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
