[tool.poetry]
name = "founmle"
version = "0.1.0"
description = "Foundational MLE beginnings"
authors = ["nupsea <eanups@yahoo.com>"]
license = "Apache License"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
jupyter = "^1.0.0"
pandas = "^1.2.5"
pytest = "^6.2.4"
matplotlib = "^3.4.2"
twine = "^3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
